--- a/src/components/FlexWrapper/flex.css
+++ b/src/components/FlexWrapper/flex.css
@@ -2,4 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    padding: 20px;
+    box-sizing: border-box;
 }
